Fixed dark mode by using media queries

--- a/src/assets/styles/_bootstrap.scss
+++ b/src/assets/styles/_bootstrap.scss
@@ -2,10 +2,12 @@
 @import "bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-$font-family-sans-serif: "Montserrat", sans-serif;
+$font-family-sans-serif: "Source Sans Pro", sans-serif;
 $font-family-monospace: "Roboto Mono", monospace;
+$headings-font-family: "Roboto", sans-serif;
 $enable-validation-icons: false;
-$table-th-font-weight: 500;
+$table-th-font-weight: 600;
+$color-mode-type: media-query;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "bootstrap/scss/variables";
